--- a/SA2025_W1.ipynb
+++ b/SA2025_W1.ipynb
@@ -848,7 +848,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -857,7 +857,7 @@
               "<Axes: xlabel='model_year', ylabel='mpg'>"
             ]
           },
-          "execution_count": 58,
+          "execution_count": 60,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -878,8 +878,9 @@
         "# sns.lineplot(x=cd.mpg.mean().reset_index().model_year , y=cd.mpg.mean().reset_index([\"o\",\"y\"]))\n",
         "\n",
         "# cd.mpg.mean().reset_index().model_year\n",
-        "ccd = cd.mpg.mean().reset_index([\"origin\",\"model_year\"])\n",
-        "sns.lineplot(x=\"model_year\", y=\"mpg\", data=ccd ,hue=\"origin\")"
+        "ccd = cd.mpg.mean().reset_index()\n",
+        "# sns.lineplot(x=\"model_year\", y=\"mpg\", data =ccd ,hue=\"origin\")\n",
+        "sns.lineplot()"
       ]
     },
     {
@@ -996,32 +997,80 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 86,
       "metadata": {
         "id": "M5pMhQOldiFC"
       },
       "outputs": [
         {
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>name</th>\n",
+              "      <th>mpg</th>\n",
+              "      <th>model_year</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>datsun pl510</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "Index(['plymouth reliant'], dtype='object', name='name')"
+              "           name  mpg  model_year\n",
+              "0  datsun pl510  0.0           2"
             ]
           },
-          "execution_count": 80,
+          "execution_count": 86,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "dd= car.groupby(\"name\").model_year.count()\n",
+        "ddd= dd.reset_index()\n",
+        "cnames= ddd[ddd.model_year>1].name\n",
         "\n",
-        "names = dd[dd>1].index\n",
+        "cstd = car[car.name.isin(cnames)].groupby(\"name\").mpg.std().reset_index()\n",
         "\n",
-        "carr =car[car.name.isin(names)].groupby(\"name\").model_year.std()\n",
+        "id = cstd[cstd.mpg==cstd.mpg.min()]\n",
+        "\n",
+        "app= ddd[ddd.name.isin(id.name)]\n",
+        "app\n",
+        "\n",
+        "ans= pd.merge(id,app)\n",
+        "ans\n",
+        "\n",
+        "# names = dd[dd>1].index\n",
+        "\n",
+        "# carr =car[car.name.isin(names)].groupby(\"name\").model_year.std()\n",
         " \n",
-        "n= carr[carr ==carr.min()].index.astype(str)\n",
-        "# ap= car.groupby(\"name\").get_group(n).model_year.count()\n",
-        "n\n",
+        "# n= carr[carr ==carr.min()].index.astype(str)\n",
+        "# # ap= car.groupby(\"name\").get_group(n).model_year.count()\n",
+        "# n\n",
         "\n",
         "\n",
         "\n",
