--- a/SA2025_W1.ipynb
+++ b/SA2025_W1.ipynb
@@ -997,7 +997,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "id": "M5pMhQOldiFC"
       },
@@ -1062,19 +1062,7 @@
         "app\n",
         "\n",
         "ans= pd.merge(id,app)\n",
-        "ans\n",
-        "\n",
-        "# names = dd[dd>1].index\n",
-        "\n",
-        "# carr =car[car.name.isin(names)].groupby(\"name\").model_year.std()\n",
-        " \n",
-        "# n= carr[carr ==carr.min()].index.astype(str)\n",
-        "# # ap= car.groupby(\"name\").get_group(n).model_year.count()\n",
-        "# n\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "ans\n"
       ]
     },
     {
