--- a/Capestone Project.ipynb
+++ b/Capestone Project.ipynb
@@ -2,16 +2,16 @@
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "# Install the necessary Python packages for data processing and visualization.\n",
-        "!pip install pathway bokeh --quiet"
-      ],
+      "execution_count": null,
+      "id": "zN6DvR1pW2Dq",
       "metadata": {
         "id": "zN6DvR1pW2Dq"
       },
-      "id": "zN6DvR1pW2Dq",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Install the necessary Python packages for data processing and visualization.\n",
+        "!pip install pathway bokeh --quiet"
+      ]
     },
     {
       "cell_type": "code",
@@ -43,19 +43,19 @@
       "outputs": [],
       "source": [
         "# Load the dataset into a DataFrame and display the few rows to understand its structure.\n",
-        "df=pd.read_csv(\"dataset.csv\")\n",
+        "df=pd.read_csv('/content/Modified - modified.csv')\n",
         "df"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
+      "id": "lUIXQ3sMZHYD",
       "metadata": {
         "id": "lUIXQ3sMZHYD"
       },
-      "id": "lUIXQ3sMZHYD",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
@@ -186,16 +186,22 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# MODEL **1**"
-      ],
+      "id": "naeFusV5IZHu",
       "metadata": {
         "id": "naeFusV5IZHu"
       },
-      "id": "naeFusV5IZHu"
+      "source": [
+        "# MODEL **1**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "rPaUdgMxZN_n",
+      "metadata": {
+        "id": "rPaUdgMxZN_n"
+      },
+      "outputs": [],
       "source": [
         "# Make the pricing function\n",
         "import datetime\n",
@@ -217,26 +223,26 @@
         "        price=10 + (pw.this.occ_max - pw.this.occ_min) / pw.this.cap\n",
         "    )\n",
         ")"
-      ],
-      "metadata": {
-        "id": "rPaUdgMxZN_n"
-      },
-      "id": "rPaUdgMxZN_n",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# MODEL **2**"
-      ],
+      "id": "FhFGuC5vIljo",
       "metadata": {
         "id": "FhFGuC5vIljo"
       },
-      "id": "FhFGuC5vIljo"
+      "source": [
+        "# MODEL **2**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "7spceVWifDo7",
+      "metadata": {
+        "id": "7spceVWifDo7"
+      },
+      "outputs": [],
       "source": [
         "# Make the pricing function\n",
         "import datetime\n",
@@ -270,16 +276,16 @@
         "        new_price = 10.0 * (1 + 0.3 * pw.this.normalized_demand)\n",
         "    )\n",
         ")"
-      ],
-      "metadata": {
-        "id": "7spceVWifDo7"
-      },
-      "id": "7spceVWifDo7",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "WYBuaRD4Dp0q",
+      "metadata": {
+        "id": "WYBuaRD4Dp0q"
+      },
+      "outputs": [],
       "source": [
         "# Activate the Panel extension to enable interactive visualizations\n",
         "pn.extension()\n",
@@ -327,41 +333,38 @@
         "# Create a Panel layout and make it servable as a web app\n",
         "# This line enables the interactive plot to be displayed when the app is served\n",
         "pn.Column(viz1,viz2).servable()\n"
-      ],
-      "metadata": {
-        "id": "WYBuaRD4Dp0q"
-      },
-      "id": "WYBuaRD4Dp0q",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "u9lt425LY0kE",
+      "metadata": {
+        "id": "u9lt425LY0kE"
+      },
+      "outputs": [],
       "source": [
         "# Run the model\n",
         "\n",
         "%%capture --no-display\n",
         "pw.run()"
-      ],
-      "metadata": {
-        "id": "u9lt425LY0kE"
-      },
-      "id": "u9lt425LY0kE",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
+      "id": "5FIef8ouXly6",
       "metadata": {
         "id": "5FIef8ouXly6"
       },
-      "id": "5FIef8ouXly6",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -378,9 +381,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.13.3"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
